# scratchmud

./: .gitattributes  .gitignore  README  autorun  bootstrap  configure.ac
data/: README
data/command/: index  reindex
data/command/f-j/: README
data/player/u-z/: README
data/user/p-t/: README
m4/: ax_compiler_flags_cflags.m4
src/: Makefile.am
src/include/scratch/: action.h  bitvector.h  block.h  client.h  color.h  command.h  constant.h  creator.h  data.h  descriptor.h  dice.h  editor.h  game.h  gender.h  list.h  log.h  memory.h  object.h  olc.h  olc_player.h  player.h  random.h  rbtree.h  scratch.h  server.h  socket.h  state.h  string.h  time.h  tree.h  user.h  utility.h
src/scratch/: Makefile.am  act_comm.c  act_informative.c  act_other.c  act_wizard.c  action.c  block.c  client.c  color.c  command.c  constant.c  creator.c  creator_user.c  data.c  descriptor.c  dice.c  editor.c  game.c  gender.c  list.c  log.c  main.c  main.h  object.c  olc.c  olc_player.c  player.c  random.c  rbtree.c  server.c  socket.c  state.c  string.c  time.c  tree.c  user.c  utility.c
