bin_PROGRAMS=$(top_builddir)/bin/scratchd
__top_builddir__bin_scratchd_LDFLAGS=-rdynamic
__top_builddir__bin_scratchd_SOURCES=\
	client.c \
	color.c \
	constant.c \
	data.c \
	editor.c \
	game.c \
	list.c \
	log.c \
	main.c \
	random.c \
	rbtree.c \
	server.c \
	socket.c \
	state.c \
	string.c \
	time.c \
	utility.c
