bin_PROGRAMS=$(top_builddir)/bin/scratch
__top_builddir__bin_scratch_LDFLAGS=-rdynamic
__top_builddir__bin_scratch_SOURCES=\
	color.c \
	creator.c \
	creator_user.c \
	data.c \
	descriptor.c \
	dice.c \
	editor.c \
	game.c \
	list.c \
	log.c \
	main.c \
	random.c \
	socket.c \
	state.c \
	string.c \
	time.c \
	tree.c \
	user.c \
	utility.c

